<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:background="@color/white"
        tools:ignore="UselessParent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp"
            android:background="@drawable/background1_vector">
            <View
                android:id="@+id/backbutton_id"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="@drawable/back_vector" />
            <RelativeLayout
                android:layout_width="175dp"
                android:layout_height="175dp"
                android:background="@drawable/elipse"
                android:layout_centerHorizontal="true"
                android:layout_above="@id/whiteboard_id"
                android:layout_marginBottom="30dp"
                android:padding="45dp"
                >

                <TextView
                    android:id="@+id/yourscore_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="Your Score"
                    android:textColor="@color/purple"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:ignore="HardcodedText,TextSizeCheck" />
                <TextView
                    android:gravity="top"
                    android:id="@+id/HomeTotalPoint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/yourscore_id"
                    android:text="100"
                    android:textStyle="bold"
                    android:textSize="30sp"
                    android:textColor="@color/purple"
                    tools:ignore="HardcodedText" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="pt"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/purple"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@id/yourscore_id"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="10dp"
                    tools:ignore="HardcodedText" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/whiteboard_id"
                android:layout_width="match_parent"
                android:layout_height="159dp"
                android:layout_centerInParent="true"
                android:layout_centerHorizontal="true"
                android:background="@drawable/whiteboard01_vector"
                android:padding="20dp"
                tools:ignore="TextSizeCheck">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/HomePercentage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="100%"
                        android:textColor="@color/purple"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        tools:ignore="HardcodedText" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Complete"
                        android:textSize="16sp"
                        tools:ignore="HardcodedText" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:background="@color/white"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/HomeCorectAns"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="13"
                        android:textColor="@color/green"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        tools:ignore="HardcodedText" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Correct"
                        android:textSize="16sp"
                        tools:ignore="HardcodedText" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"

                    android:background="@color/white"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/HomeTotalQuestion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="20"
                        android:textColor="@color/purple"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        tools:ignore="HardcodedText" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Total Question"
                        android:textSize="16sp"
                        tools:ignore="HardcodedText" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:background="@color/white"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/HomeWrongAns"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="07"
                        android:textColor="@color/yellow_red"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        tools:ignore="HardcodedText" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="wrong"
                        android:textSize="16sp"
                        tools:ignore="HardcodedText" />


                </LinearLayout>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="50dp"
                android:layout_below="@+id/whiteboard_id">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageButton
                        android:id="@+id/playAgainButton"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_centerHorizontal="true"
                        android:background="@color/white"
                        android:contentDescription="@string/playagain"
                        android:src="@drawable/play_agian_vector"
                        tools:ignore="DuplicateSpeakableTextCheck" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/playAgainButton"
                        android:text="@string/playagain" />

                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true">

                    <ImageButton
                        android:id="@+id/reviewbutton_id"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_centerHorizontal="true"
                        android:background="@color/white"
                        android:contentDescription="@string/review"
                        android:src="@drawable/review_vector"
                        tools:ignore="ImageContrastCheck,DuplicateSpeakableTextCheck" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/reviewbutton_id"
                        android:text="@string/review"/>

                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    tools:ignore="RelativeOverlap">

                    <ImageButton
                        android:id="@+id/share_button_id"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_centerHorizontal="true"
                        android:background="@color/white"
                        android:contentDescription="share_source"
                        android:src="@drawable/share_vector"
                        tools:ignore="HardcodedText,DuplicateSpeakableTextCheck" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/share_button_id"
                        android:text="@string/share"/>

                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true">

                    <ImageButton
                        android:id="@+id/generate_pdf_id"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_marginStart="10dp"
                        android:background="@color/white"
                        android:contentDescription="generate pdf"
                        android:src="@drawable/pdf_genarate_vector"
                        tools:ignore="HardcodedText,ImageContrastCheck" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/generate_pdf_id"
                        android:text="@string/generate_pdf"/>

                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentBottom="true">

                    <ImageButton
                        android:id="@+id/home_button_id"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_centerHorizontal="true"
                        android:background="@color/white"
                        android:contentDescription="@string/review"
                        android:src="@drawable/home_vector"
                        tools:ignore="ImageContrastCheck" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/home_button_id"
                        android:text="@string/home"
                        android:layout_centerHorizontal="true" />

                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    tools:ignore="RelativeOverlap">
                    <ImageButton
                        android:id="@+id/leaderboard_id"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:background="@color/white"
                        android:layout_centerHorizontal="true"
                        android:src="@drawable/leader_board_vector"
                        android:contentDescription="share_source"
                        tools:ignore="HardcodedText" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/leaderboard_id"
                        android:text="@string/leaderboard"/>
                </RelativeLayout>
            </RelativeLayout>
        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>